<resources>
    <string name="app_name">X-APM</string>
    <string name="app_code_name" translatable="false">X-APM</string>
    <string name="manage_overlay">Manage overlay</string>
    <string name="switch_on_text">Enabled</string>
    <string name="switch_off_text">Not enabled</string>
    <string name="test_noter">Password test</string>
    <string name="input_password">%1$s is locked</string>
    <string name="dump_module">Module state</string>
    <string name="title_settings">Settings</string>
    <string name="title_copy_list">Copy the list</string>
    <string name="title_view_photos">View visitors</string>
    <string name="title_take_photo">Capture visitors</string>
    <string name="title_dev_mode">Debug mode</string>
    <string name="title_adb_wireless">ADB over Wireless</string>
    <string name="title_exp">Experiment</string>
    <string name="title_advance">Advance</string>
    <string name="adb_wireless_shell_success">ADB over Wireless shell success</string>
    <string name="adb_wireless_shell_fail">ADB over Wireless shell fail</string>
    <string name="summary_adb_wireless">Enable or disable ADB over wireless(need root)\nADB over wireless use IP address:</string>
    <string name="summary_dev_mode">Activate log output, will increase power consumption. No need for non-developers</string>
    <string name="summary_take_photo">When the password is entered incorrectly, try to save a photo of the front camera. Note that the success of the save depends to some extent on the speed of the camera preview of your device and the speed of the input.</string>
    <string name="summary_manage_overlay">We will use the system dialog box to display the unlock interface, so you must turn on the overlay layer in the system settings to use the most basic functions.</string>
    <string name="title_basic">Basic</string>
    <string name="title_fullscreen_noter">Fullscreen verifier</string>
    <string name="title_not_available">Not available</string>
    <string name="title_app_ver">Version</string>
    <string name="title_about">About</string>
    <string name="summary_dump_module">Check the inject states.</string>
    <string name="summary_test_noter">Test code pad style and wheather correctly popped up</string>
    <string name="title_my_act_code">My activation code</string>
    <string name="title_picker">App picker</string>
    <string name="title_setup_passcode">Password settings</string>
    <string name="title_setup_passcode_now">Go to settings</string>
    <string name="summary_setup_passcode_none_set">Password has not been set, application launch will not be verified(App lock).</string>
    <string name="summary_setup_passcode_set">Password has been set</string>
    <string name="title_setup_code_repeat">Confirm</string>
    <string name="title_setup_code_new">Input new</string>
    <string name="title_setup_code_invalid">Password not valid</string>
    <string name="title_setup_code_mismatch">Inconsistent input</string>
    <string name="title_help">User manual</string>
    <string name="title_help_available_pmh">Help</string>
    <string name="title_donate">Donate</string>
    <string name="title_show_system_app">System apps</string>
    <string name="first_run_title">Tips</string>
    <string name="message_first_run">App is open source and hosted on Github, published apk is built by CI. \n\nThe purpose of this application development is to prevent as much as possible the consumption of system resources by the infrequent APPs. The commonly used APPs do not interfere in any way. Otherwise, they may cause problems in use, waste a lot of time and effort, and even affect their own lives. The effect (except for friends who are willing to take the initiative to solve the problem), so you do not need to use all the features. \n\nThe new version provides some additional minor features for the Play version and donated friends. If you have already donated, go to 'Donate' and check 'I have donated'. Play Edition does not require this setting to use all features.</string>
    <string name="title_hide_pattern">Hide pattern</string>
    <string name="title_use_fp">Use fingerprint</string>
    <string name="title_ver_on_home">Re-verify when app switched</string>
    <string name="summary_always_need_verify">The default mechanism is that applications that have been previously authenticated need to be revalidated when the screen goes out and re-lit. If this option is enabled, it will need to be verified each time.</string>
    <string name="title_reboot_take_effect">Some settings need a reboot to take effect.</string>
    <string name="title_reboot_take_effect_blur">Turn on/off need restart your phone</string>
    <string name="title_passcode_wrong">Wrong password, try again</string>
    <string name="title_delete_success">Deleted!</string>
    <string name="title_theme">Theme</string>
    <string name="title_app_recent_blur">Recent Blur</string>
    <string name="title_ver_on_screenoff">Re-verify after screen off</string>
    <string name="title_crop_enabled">Clip to round icon</string>
    <string name="title_show_app_icon">Show app icon</string>
    <string name="title_verify_method">Locker</string>
    <string name="title_verify_pattern">Pattern</string>
    <string name="title_camera">Camera</string>
    <string name="title_password">Unlock</string>
    <string name="title_verify_settings">Verify</string>
    <string name="title_themes">Theme</string>
    <string name="title_restart_android">Soft restart</string>
    <string name="summary_verify_on_home">This function is currently unstable, some applications may not be applicable, if you find a problem please turn off this option.</string>
    <string name="summary_verify_on_screenoff">Recommended to turn on for security</string>
    <string name="title_general_settings">General settings</string>
    <string name="lk_delay">Delayed cleaning</string>
    <string name="title_export_service_settings">Export service settings</string>
    <string name="title_export_broadcast_settings">Export broadcast settings</string>
    <string name="title_export_activity_settings">Export activity settings</string>
    <string name="title_import_service_settings">Import service settings</string>
    <string name="title_import_broadcast_settings">Import broadcast settings</string>
    <string name="title_import_activity_settings">Import activity settings</string>
    <string name="title_copy_to_clipboard">Copy to clipboard</string>
    <string name="title_comp_edit">Edit component</string>
    <string name="title_feedback">Feedback</string>
    <string name="title_unlock_vibrate_enabled">Vibrate when success to unlock</string>
    <string name="title_error_vibrate_enabled">Vibrate when fail to unlock</string>
    <string name="title_app_recent_blur_radius">Blur radius</string>
    <string name="summary_app_recent_blur_radius">Increasing the radius parameter of the blur algorithm can reduce its processing time and resource cost, but will cause the generated image to become more blurred too.</string>
    <string name="title_comp_uninstall">Uninstall</string>
    <string name="title_comp_details">Details</string>
    <string name="titile_lk_do_not_kill_audio">Do not kill audio app</string>
    <string name="summary_lk_do_not_kill_audio">Don\'t cleaned up applications that get audio focus(MUSIC/MOVIE/SPEECH), such as NetEase cloud music that is playing music.\n Note that some applications that are not designed according to the specification may still hold the audio focus after stopping playback.</string>
    <string name="title_search">Search</string>
    <string name="title_edit">edit</string>
    <string name="title_remove">remove</string>
    <string name="title_config_setting">Configuration/Manifest</string>
    <string name="title_disable_all">Disable all</string>
    <string name="title_enable_all">Enable all</string>
    <string name="title_restart_rec">Reboot to Recovery</string>
    <string name="title_restart_bl">Reboot to Bootloader</string>
    <string name="title_change_column_count">Switch layout</string>
    <string name="title_running_services">Running services</string>
    <string name="message_user_giude1">这是一份不得不写的声明，请仔细阅读。\n\n1. 关于应用管理数据，为了实现开机自启动限制，我们必须把某些数据存放到系统某个目录下，我们提供了删除数据的功能，如果你介意请退出！\n\n2. 关于内存占用，应用管理本身无需后台运行，你随时可以杀死。前台运行占用部分运行内存，如果你介意请退出！\n\n3. 关于稳定性，ROM众多，可能你的设备并不兼容，会导致一些使用上的问题，如果你介意，请退出！\n\n4. 关于bug，非常感谢所有朋友的bug反馈，本人会利用闲暇时间进行维护。\n\n本程序提供的高级功能，例如组件编辑，绿化等，使用不当可能会导致应用闪退等，请使用前仔细看好说明。\n\n最后感谢支持与理解！！！</string>
    <string name="user_notice_no">Different from what I expected</string>
    <string name="user_notice_yes">I think that is OK.</string>
    <string name="title_draw_vibrate">Draw vibrate</string>
    <string name="title_do_not_kill_sbn_app">Protect apps that have notifications</string>
    <string name="summary_do_not_kill_sbn_app">Lock screen cleanup is not applied to applications with notification messages.</string>
    <string name="summary_verify_on_task_removed">When the app is crossed out from the recent task card, the app needs to be re-verified the next time it is launched.</string>
    <string name="title_ver_on_task_removed">re-verify when recent task card crossed out</string>
    <string name="title_allow_all">Allow all</string>
    <string name="ignore_allow_all">Ignore All</string>
    <string name="title_app_update_log_view">Change log</string>
    <string name="title_per_app_settings">Single configuration</string>
    <string name="title_start_test">Test</string>
    <string name="title_uninstall_apm">Uninstall</string>
    <string name="title_opt">optimization</string>
    <string name="title_app_lock_workaround">Enabled Workaround</string>
    <string name="summary_app_lock_workaround">Quickly switching between unlocking and target apps can cause some stability issues, check this option to circumvent the issue.</string>
    <string name="title_main_status">Status</string>
    <string name="title_show_app_process_update">Show quick action notification (experiment)</string>
    <string name="summary_show_app_process_update">Displays a notification to help users quickly clean up and monitor cleanable apps. Note that the cleanup list and conditions are the same as the lock screen cleanup. For example, it will check if the application has notifications and whether it has opened the application without notifying the notification.。</string>
    <string name="title_app_recent_blur_opt_cache">Use cache</string>
    <string name="summary_app_recent_blur_opt_cache">Since blurring is enabled, each task snapshot needs to be processed once, which consumes some CPU and memory resources. You can enable this option on a poorly performing machine and use the cached blurred image instead of the current application snapshot. Note that this may be Let your recent task card content not appear to be updated in real time.</string>
    <string name="title_copy_pkg_name">Copy package name</string>
    <string name="title_workflow_save">Save</string>
    <string name="title_workflow_run">Execute</string>
    <string name="title_copy_launch_intent">Copy launch intent</string>
    <string name="editor_action_move_left">Left</string>
    <string name="editor_action_move_right">Right</string>
    <string name="title_more">More</string>
    <string name="title_manage_basic">Basic</string>
    <string name="title_manage_advanced">Advanced</string>
    <string name="title_app_ops_template">Permission template</string>
    <string name="title_select_from_ops_template">Select template settings</string>
    <string name="title_dynamic_color_enabled">Automatic color picking</string>
    <string name="summary_dynamic_color_enabled">Extract the theme color of the currently locked app as the main color of the app lock page</string>
    <string name="title_verifier_theme_color">Theme color</string>
    <string name="summary_verifier_theme_color">Unlock page theme color</string>
</resources>