<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="category_lock"
        android:title="@string/title_password">
        <Preference
            android:key="verify_method"
            android:persistent="false"
            android:summary="@string/title_verify_pattern"
            android:title="@string/title_verify_method" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="key_hide_pattern"
            android:title="@string/title_hide_pattern" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="fp_enabled"
            android:title="@string/title_use_fp" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="app_lock_workaround"
            android:summary="@string/summary_app_lock_workaround"
            android:title="@string/title_app_lock_workaround" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/title_camera">

        <SwitchPreference
            android:defaultValue="false"
            android:key="key_ag_take_photo_enabled"
            android:summary="@string/summary_take_photo"
            android:title="@string/title_take_photo" />

        <Preference
            android:key="key_view_photos"
            android:title="@string/title_view_photos" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/title_verify_settings">
        <SwitchPreference
            android:defaultValue="false"
            android:key="ver_on_home"
            android:persistent="false"
            android:summary="@string/summary_verify_on_home"
            android:title="@string/title_ver_on_home" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="ver_on_screenoff"
            android:persistent="false"
            android:summary="@string/summary_verify_on_screenoff"
            android:title="@string/title_ver_on_screenoff" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="ver_on_task_removed"
            android:persistent="false"
            android:summary="@string/summary_verify_on_task_removed"
            android:title="@string/title_ver_on_task_removed" />
    </PreferenceCategory>

</PreferenceScreen>