<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/title_general_settings">
        <SwitchPreference
            android:defaultValue="true"
            android:key="do_not_kill_audio"
            android:persistent="false"
            android:summary="@string/summary_lk_do_not_kill_audio"
            android:title="@string/titile_lk_do_not_kill_audio" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="do_not_kill_sbn"
            android:persistent="false"
            android:summary="@string/summary_do_not_kill_sbn_app"
            android:title="@string/title_do_not_kill_sbn_app" />
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/lk_delay_entries"
            android:entryValues="@array/lk_delay_seconds"
            android:key="key_lk_delay"
            android:title="@string/lk_delay" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/title_opt">
        <SwitchPreference
            android:defaultValue="true"
            android:key="show_app_process_update"
            android:persistent="false"
            android:summary="@string/summary_show_app_process_update"
            android:title="@string/title_show_app_process_update" />
    </PreferenceCategory>
</PreferenceScreen>