<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/title_app_recent_blur">
        <github.tornaco.xposedmoduletest.ui.widget.BlurRadiusPreference
            android:defaultValue="15"
            android:key="blur_radius"
            android:persistent="false"
            android:summary="@string/summary_app_recent_blur_radius"
            android:title="@string/title_app_recent_blur_radius" />

        <SwitchPreference
            android:key="opt_blur_cache"
            android:persistent="false"
            android:summary="@string/summary_app_recent_blur_opt_cache"
            android:title="@string/title_app_recent_blur_opt_cache" />
    </PreferenceCategory>
</PreferenceScreen>