<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="github.tornaco.xposedmoduletest.ui.activity.comp.ComponentEditorActivity">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/title_search"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/action_disable_all"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/title_disable_all" />

    <item
        android:id="@+id/action_enable_all"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/title_enable_all" />


    <group android:orderInCategory="100">
        <item
            android:id="@+id/action_export_service_settings"
            android:orderInCategory="100"
            android:title="@string/title_export_service_settings"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_export_broadcast_settings"
            android:orderInCategory="101"
            android:title="@string/title_export_broadcast_settings"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_export_activity_settings"
            android:orderInCategory="102"
            android:title="@string/title_export_activity_settings"
            app:showAsAction="never" />
    </group>


    <group android:orderInCategory="101">
        <item
            android:id="@+id/action_import_service_settings"
            android:orderInCategory="102"
            android:title="@string/title_import_service_settings"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_import_broadcast_settings"
            android:orderInCategory="103"
            android:title="@string/title_import_broadcast_settings"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_import_activity_settings"
            android:orderInCategory="104"
            android:title="@string/title_import_activity_settings"
            app:showAsAction="never" />
    </group>
</menu>

