<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_soft_restart"
        android:title="@string/title_restart_android"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_restart_rec"
        android:title="@string/title_restart_rec"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_restart_bl"
        android:title="@string/title_restart_bl"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_running_services"
        android:title="@string/title_running_services"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_start_test"
        android:title="@string/title_start_test"
        android:visible="false"
        app:showAsAction="never" />
</menu>