<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_help"
        android:icon="@drawable/ic_questionnaire_fill"
        android:title="@string/title_help"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_change_column_count"
        android:icon="@drawable/ic_view_stream_white_24dp"
        android:title="@string/title_change_column_count"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_update_log"
        android:icon="@drawable/ic_format_list_bulleted_black_24dp"
        android:title="@string/title_app_update_log_view"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_uninstall"
        android:icon="@drawable/ic_delete_black_24dp"
        android:title="@string/title_uninstall_apm"
        android:visible="false"
        app:showAsAction="never" />
</menu>