<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="github.tornaco.xposedmoduletest.ui.activity.comp.ComponentEditorActivity">

    <item
        android:id="@+id/action_copy_to_clipboard"
        android:orderInCategory="100"
        android:title="@string/title_copy_to_clipboard"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_edit"
        android:orderInCategory="100"
        android:title="@string/title_edit"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_remove"
        android:orderInCategory="100"
        android:title="@string/title_remove"
        app:showAsAction="never" />

</menu>

