<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="github.tornaco.xposedmoduletest.ui.activity.nf.NetworkRestrictActivity">

    <item
        android:id="@+id/action_info"
        android:icon="@drawable/ic_info_white_24dp"
        android:title="@string/app_name"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/title_search"
        android:visible="true"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_ops_template"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/title_app_ops_template"
        app:showAsAction="never" />

</menu>
