<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="github.tornaco.xposedmoduletest.ui.activity.nf.NetworkRestrictActivity">

    <item
        android:id="@+id/action_allow_all"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/title_allow_all"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_ignore_all"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/ignore_allow_all"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_select_from_ops_template"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/title_select_from_ops_template"
        android:visible="true"
        app:showAsAction="never" />
</menu>
