<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/activity_horizontal_margin">

    <TextView
        android:id="@+id/section_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/message_user_giude1" />

    <Button
        android:id="@+id/yes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/no"
        android:text="@string/user_notice_yes"
        android:textColor="@color/white"
        android:theme="@style/ButtonBarGuide" />

    <Button
        android:id="@+id/no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/user_notice_no"
        android:textColor="@color/white"
        android:theme="@style/ButtonBarGuide" />

</RelativeLayout>